@@ -27,3 +27,4 @@ New internal features:
 - Don't use strings for permission names in the installer.
 - Added an example display method for formatting CPSPortlets content items.
 - Replaced Localizer by TranslationService.
+- Moved computeContributors from CPSDocument to the utils module.
